--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -18,18 +18,36 @@
   background-color: rgba(7, 39, 18, 0.801); /* Background color on hover */
 }
 
-.post.card {
+.post.cardblog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Center vertically */
+  align-items: left; /* Center horizontally */
   border-radius: $rounded-borders;
   text-decoration: none !important;
-  padding: 15px;
-  height: 100%;
+  margin: 0px auto;
+  background-color: rgba(0, 53, 32, 0.616);
 
   .card-footer {
     font-size: 14px;
-    margin: 0 -15px -15px -15px;
-    padding: 10px 35px;
+    // margin: 0 -15px -15px -15px;
+    // padding: 10px 35px;
+    width: 100%;
+    height: 3vw;
+    object-fit: cover;
+    background-color: rgba(0, 114, 68, 0.137);
+    border-radius: $rounded-borders;
+  }
+  transition: transform 400ms;
+
+  &:hover {
+    transform: translateY(-8px);
+    box-shadow: -2px 8px 40px -12px rgba(0, 0, 0, 0.44);
+    color: #6be9ff !important;
   }
 }
+
+
 
 .post {
   .post-metadata {
